Created. env updated api added news page to site Please enter the commit message for your changes. Lines starting

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -76,9 +76,9 @@
     .navbar {
         padding: 20px 5%;
     }
-    .navbar ul {
-        display:none
-    }
+        .navbar ul li:first-child {
+            display: none;
+        }
     .navbar button img {
         width:12px;
     }
