--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -61,7 +61,12 @@
     width: 13px;
 }
 
-
+.navbar ul li .active {
+    color: #00e0aa;
+    border-bottom: 2px solid #00e0aa;
+    padding-bottom: 2px;
+    transition: all 0.2s ease-in-out;
+}
 @media (max-width: 900px){
     .navbar {
         padding: 20px 8%;
