--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -34,7 +34,7 @@
     padding: 5px 8px;
     border-radius: 6px;
     border: 2px solid white;
-    background: transparent;
+    background-color: #0a0f1a;
     color:white;
 }
 
@@ -63,7 +63,6 @@
 
 .navbar ul li .active {
     color: #00e0aa;
-    border-bottom: 2px solid #00e0aa;
     padding-bottom: 2px;
     transition: all 0.2s ease-in-out;
 }
