--- a/src/pages/News/News.css
+++ b/src/pages/News/News.css
@@ -11,20 +11,22 @@
 }
 
 .news-controls {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  margin-bottom: 2rem;
-}
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin-bottom: 2rem;
+  }
 
-.news-search,
 .news-filter {
   padding: 0.75rem;
   border: 1px solid #4c4c88;
   border-radius: 8px;
-  background-color:rgb(9, 24, 58); 
+  background-color: rgb(9, 24, 58);
   color: #fff;
+  width: 250px;
+  max-width: 90%;
 }
+
 
 .news-grid {
   display: grid;
